# Code-Review-AI-Platform

./: .env.example  .gitignore  Dockerfile  FINAL_RELEASE_CHECK.md  FINAL_RELEASE_REVIEW.md  LICENSE  POST_CLEANUP_REPORT.md  PROJECT_POSITIONING.md  PUBLISH_CHECKLIST.md  README.md  RELEASE_SUMMARY.md  __init__.py  docker-compose.yml  pyproject.toml  requirements.txt  schemas.py
agents/: __init__.py  _ast_analysis.py  _scan_utils.py  architecture_agent.py  base_agent.py  bug_agent.py  complexity_agent.py  report_agent.py  security_agent.py  solid_agent.py
api/: dependencies.py  main.py
api/middleware/: __init__.py  auth.py  logging.py
api/routes/: __init__.py  health.py  report.py  review.py  status.py
archive/graph_nodes_legacy/: __init__.py  analyze_node.py  compile_node.py  enrich_node.py  ingest_node.py
archive/internal_audits/: SYSTEM_AUDIT.md  benchmark_repos.py  (+1 more)
config/: __init__.py  settings.py
docs/: BENCHMARKS.md  RELEASE_NOTES_V1.md  ROADMAP.md  api_contracts.md  architecture.md  data_flow.md  folder_responsibilities.md
graph/: __init__.py  graph.py  state.py  workflow.py
prompts/: architecture_analysis.jinja2  bug_analysis.jinja2  security_analysis.jinja2  solid_analysis.jinja2  summary_generation.jinja2
rag/: __init__.py  chunker.py  embedder.py  embeddings.py  faiss_store.py  retriever.py  vector_store.py
reports/: generator.py
services/: __init__.py  job_store.py  llm_client.py
tests/: conftest.py
tools/: __init__.py  chunker.py  file_parser.py  github_tools.py  language_detector.py  parser.py
ui/: app.py  streamlit_app.py
(+24 files in other folders)
